# othello

./: .gitignore  CMakeLists.txt  README  othello.c  othello_bench.c  othello_test.c  text_othello.c  win_othello.c  win_othello_res.h  win_othello_res.rc  x11_othello.c
android/: AndroidManifest.xml  build.sh
android/java/net/hanshq/othello/: OthelloActivity.java  OthelloBoard.java  OthelloView.java
android/jni/: othello_board.c
android/res/layout/: activity_othello.xml
android/res/menu/: menu_othello.xml
icons/: othello_icon.xpm
ios/: AppDelegate.m  Info.plist  LaunchScreen.storyboard  OthelloView.h  OthelloView.m  OthelloViewController.h  OthelloViewController.m  main.m
ios/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/Othello.xcodeproj/: project.pbxproj
mac/: AppDelegate.h  AppDelegate.m  Info.plist  MainMenu.xib  OthelloView.h  OthelloView.m  build.sh  main.m
mac/Othello.xcodeproj/: project.pbxproj
web/: othello.asm.js  wasm_othello.js  wasm_othello.wasm  web_othello.html  web_othello.js  web_othello_worker.js
